# solana-contract

./: .gitignore  Cargo.toml  Readme.md  TODO.md
docs/: simple_token.rs
simple_program/: Cargo.toml  simple_program-keypair.json
simple_program/src/: lib.rs
solana-contract-derive/: Cargo.toml
solana-contract-derive/src/: from_accounts.rs  lib.rs
src/: handler.rs  lib.rs
src/router/: anchor_router.rs  array_router.rs  mod.rs  service.rs
